fix classes for wrapers (#63)

--- a/src/styles/components/_people-behind.scss
+++ b/src/styles/components/_people-behind.scss
@@ -12,16 +12,16 @@
     @include description($text-color-dark);
   }
 
+  &__img-wrp {
+    height: 300px;
+    margin-bottom: 20px;
+  }
+
   &__img {
     object-fit: cover;
     height: inherit;
     width: inherit;
     border-radius: $image-border-radius;
-
-    &--wrp {
-      height: 300px;
-      margin-bottom: 20px;
-    }
   }
 
   @media (max-width: 995px) {
@@ -37,7 +37,7 @@
       font-size: 16px;
     }
 
-    &__img--wrp {
+    &__img-wrp {
       height: 180px;
 
       &:first-child {
@@ -51,7 +51,7 @@
   }
 
   @media (max-width: 495px) {
-    &__img--wrp {
+    &__img-wrp {
       height: 80px;
     }
   }
